<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<TextView
    android:id="@+id/photo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey"
    android:padding="60dp"
    android:textSize="45sp"
    android:text="@string/photo"
    android:gravity="center"/>

    <ImageView
        android:id="@+id/photo_icon"
        android:contentDescription="@string/photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/photo"
        android:tint="@color/white"
        android:layout_alignEnd="@+id/photo"
        android:layout_alignBottom="@id/photo"
        android:padding="15dp"/>


    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_below="@id/photo"
       android:layout_margin="15dp"/>

    <EditText
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:layout_below="@id/title"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="270dp"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:layout_below="@id/title"
        android:layout_marginTop="50dp"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="15dp" />

    <ImageView
        android:id="@+id/location_icon"
        android:contentDescription="@string/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/location"
        android:layout_below="@id/title"
        android:layout_alignEnd="@id/location"
        android:layout_marginTop="60dp"/>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/price"
        android:text="@string/description"
        android:layout_marginTop="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>

    <EditText
        android:id="@+id/inventory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inventory"
        android:layout_below="@id/description"
        android:layout_marginTop="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="270dp"/>

    <EditText
        android:id="@+id/weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:layout_below="@id/description"
        android:layout_marginTop="50dp"
        android:layout_marginStart="260dp"
        android:layout_marginEnd="15dp"/>

</RelativeLayout>