<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/photo"
        android:gravity="center"
        android:textSize="45sp"
        android:padding="60dp"
        android:background="@color/grey"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/photo"
            android:contentDescription="@string/photo"
            android:tint="@color/white"
            android:layout_marginTop="140dp"
            android:layout_marginStart="370dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/location"
        android:contentDescription="@string/location"
        android:layout_marginTop="305dp"
        android:layout_marginStart="370dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:layout_marginTop="200dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:layout_weight="2"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="50dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:layout_weight="1"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="50dp"/>

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginTop="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inventory"
                android:layout_weight="1"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="60dp"
                android:layout_marginTop="50dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:layout_weight="1"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="50dp"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>