<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/sign_in"
        android:textSize="40sp"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="40dp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edit_text_background"
        android:text="@string/email"
        android:textSize="20sp"
        android:fontFamily="sans-serif-condensed"
        android:padding="15dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edit_text_background"
        android:text="@string/password"
        android:textSize="20sp"
        android:fontFamily="sans-serif-condensed"
        android:padding="15dp"/>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"/>

    <TextView
        android:id="@+id/remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/checkbox"
        android:layout_below="@id/password"
        android:layout_marginTop="35dp"
        android:layout_marginStart="10dp"
        android:text="@string/remember"
        android:fontFamily="sans-serif-condensed"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_toEndOf="@id/remember"
        android:layout_marginTop="35dp"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="40dp"
        android:text="@string/forgot_password"
        android:fontFamily="sans-serif-condensed"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkbox"
        android:layout_alignParentStart="true"
        android:layout_marginTop="220dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/button_background"
        android:padding="15dp"
        android:text="@string/sign_in"
        android:fontFamily="sans-serif-condensed"
        android:textSize="30sp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/just_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_button"
        android:layout_alignParentStart="true"
        android:text="@string/just_sign_in"
        android:fontFamily="sans-serif-condensed"
        android:textSize="20sp"
        android:layout_marginTop="70dp"
        android:gravity="center_horizontal"/>

</RelativeLayout>